--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <img id="img" class="card-img-top" width="10%" height="auto">
             <p id="termica" class="temp"></p>
           </div>
-    <div class="row">
-        <div id="data" class=" text-center col-lg-6">
+    <div class="row mb-5">
+        <div id="data" class=" text-center col-12 col-lg-6">
           <p id="maxima" class="card-text"></p>
           <p id="minima" class="card-text"></p>
           <p id="humedad" class="card-text"></p>
           <p id="viento" class="card-text"></p>
           <p id="presion" class="card-text"></p>
         </div>
-        <div id="mapa" class="col-lg-6">
+        <div id="mapa" class="col-12 col-lg-6">
     
         </div>
     </div>
